@@ -1,3 +1,7 @@
+2022/05/06    Nakata Maho <maho@riken.jp> 2.0 branch
+            * svd.in: Tests of the complex Singular Value Decomposition routines
+              have passed for all precisions except for dd and qd.
+
 2022/05/04    Nakata Maho <maho@riken.jp> 2.0 branch
             * Cgg.in: Tests of the complex Generalized Nonsymmetric Eigenvalue Problem routines
               have passed for all precisions.
